@@ -1,6 +1,7 @@
 Version 1.3.5
 * m5d and m5spec : behave better if -h is given
 * mark5_format_mark5b_init: if no nanoseconds in headers, then assume 2048-16-2 (this is to support Mark5B mode via Mark5C)
+* allow read from stdin
 * Version for DiFX-1.5.4
 
 Version 1.3.4
